Countries API Fetch partially done

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </div>
             </div>
         </a> 
-        <a href="#">
+        <a href="./html/worldCountries.html">
             <div class="d-flex flex-column justify-content-center align-items-center">
-                <h1 class="text-white">??? API</h1>
+                <h1 class="text-white">Countries of the World API</h1>
                 <div id="apiimage2">
     
                 </div>
