Api 3 in progress

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
             </div>
         </a>  
-        <a href="#">
+        <a href="./html/creditCard.html">
             <div class="d-flex flex-column justify-content-center align-items-center">
-                <h1 class="text-white">??? API</h1>
+                <h1 class="text-white">Credit Card Generator API</h1>
                 <div id="apiimage3">
     
                 </div>
