--- a/html/worldCountries.html
+++ b/html/worldCountries.html
@@ -18,17 +18,8 @@
         <h1>Welcome to the World Countries API Fetch</h1>
     </header>
     <main class="w-100 d-flex flex-column text-white p-3 align-items-center gap-3 mb-5" id="mainSection">
-
         <button id="randomCo" class="btn btn-primary w-25">Get a Random Country</button>
-        <button class="btn btn-primary w-25">Search by Name</button>
-        
-        <!-- <div id="cardDiv" class="card w-50">
-            <img src="https://media.istockphoto.com/id/667375402/photo/symbol-question-silhouette-of-cat-black-background.jpg?s=612x612&w=0&k=20&c=YTbdqJmyXlupEDHDjPg05wOxr8b8j3It70SqR5NKyhY=" class="card-img-top" alt="Cat">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Click the button below to get a random cat</h5>
-            </div>
-        </div>
-        <a href="#" class="btn btn-primary mt-3" id="refresh">Get a New Cat</a> -->
+        <button id="nameSearch" class="btn btn-primary w-25">Search by Name</button>
     </main>
     
     <footer class="bg-secondary d-flex flex-column justify-content-center align-items-center py-3">
