--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <title>World Countries API</title>
+    <title>Choose your Page</title>
 </head>
 <body class="bg-dark vw-100 vh-auto">
     <nav class="w-100 bg-secondary d-flex justify-content-center gap-5 py-3">
@@ -14,25 +14,19 @@
         <a href="./listOfAPI.html">List of APIs</a>
         <a href="./about.html">About</a>
     </nav>
-    <header class="w-100 d-flex flex-column align-items-center text-white p-5">
-        <h1>Welcome to Credit Cards Generator API Fetch</h1>
-    </header>
-    <main class="w-100 d-flex flex-column text-white p-3 align-items-center gap-3 mb-5">
-        <div id="cardDiv" class="card w-100 d-flex flex-column align-items-center">
-            
-            <img class="w-25" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuqLjnCShRFw-h9bEww50n6OnqY3jXnH4BrA&usqp=CAU" class="card-img-top" alt="Credit Card" height="300px">
-            <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Click the button below to get a random card</h5>
-            </div>
-        </div>
-        <button id="randomCard" class="btn btn-primary w-25">Get a Random Card</button>
+
+    <main class="w-100 h-auto d-flex flex-column  align-items-center justify-content-center p-5 gap-5 text-white">
+        <h1>ABOUT</h1>
+        <h4>Page made by Daniel Guevara a rookie student of web programming</h4>
+        <h4>In this little project I apply API Fetch concepts learned at BIT Institute</h4>
     </main>
-    
+
     <footer class="bg-secondary d-flex flex-column justify-content-center align-items-center py-3">
-        <h3>Created By Daniel Guevara Montilla</h3>
-        <h3>BIT Institute</h3>
+        <h3>Realizado por Daniel Guevara Montilla</h3>
+        <h3>Para BIT Institute</h3>
     </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="../assets/js/creditCard.js"></script>
 </body>
 </html>
