--- a/html/catAPI.html
+++ b/html/catAPI.html
@@ -11,8 +11,8 @@
 <body class="bg-dark vw-100 vh-auto">
     <nav class="w-100 bg-secondary d-flex justify-content-center gap-5 py-3">
         <a href="../index.html">Home</a>
-        <a href="#">List of APIs</a>
-        <a href="#">About</a>
+        <a href="./listOfAPI.html">List of APIs</a>
+        <a href="./about.html">About</a>
     </nav>
     <header class="w-100 d-flex flex-column align-items-center text-white p-5">
         <h1>Welcome to the Cats API Fetch</h1>
